--- a/pages/clients.html
+++ b/pages/clients.html
@@ -119,8 +119,8 @@
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">Редактировать</button>
-									<button type="button" class="dropdown-item">Удалить</button>
+
+									<button type="button" class="dropdown-item" onclick="deleteItemList(event)">Удалить</button>
 								</div>
 							</div>
 						</li>
@@ -131,8 +131,8 @@
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">Редактировать</button>
-									<button type="button" class="dropdown-item">Удалить</button>
+
+									<button type="button" class="dropdown-item" onclick="deleteItemList(event)">Удалить</button>
 								</div>
 							</div>
 						</li>
@@ -143,8 +143,8 @@
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">Редактировать</button>
-									<button type="button" class="dropdown-item">Удалить</button>
+
+									<button type="button" class="dropdown-item" onclick="deleteItemList(event)">Удалить</button>
 								</div>
 							</div>
 						</li>
@@ -155,8 +155,8 @@
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">Редактировать</button>
-									<button type="button" class="dropdown-item">Удалить</button>
+
+									<button type="button" class="dropdown-item" onclick="deleteItemList(event)">Удалить</button>
 								</div>
 							</div>
 						</li>
