--- a/pages/templates.html
+++ b/pages/templates.html
@@ -102,7 +102,8 @@
 				</button>
 				<div class="dropdown-menu" style="">
 					<a href="./create-template.html" type="button" class="dropdown-item _icon-template">Шаблон</a>
-					<button type="button" class="dropdown-item _icon-folder">Папку</button>
+					<button type="button" class="dropdown-item _icon-folder" data-toggle="modal"
+						data-target="#modal-create-folder">Папку</button>
 
 				</div>
 			</div>
@@ -115,46 +116,54 @@
 
 					<ul class="search-items__list ">
 						<li class="_icon-folder ">
-							<a href="./template-page.html" class="flex-fill "> Септики</a> <span>12.12.2024</span>
+							<a href="./template-page.html" class="flex-fill " data-name-il> Септики</a>
+							<span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">Редактировать</button>
-									<button type="button" class="dropdown-item">Удалить</button>
+									<button type="button" class="dropdown-item" data-toggle="modal"
+										data-target="#modal-edit-folder" onclick='getNameItemList(event)'>Редактировать</button>
+									<button type="button" class="dropdown-item" onclick="deleteItemList(event)">Удалить</button>
 								</div>
 							</div>
 						</li>
 						<li class="_icon-folder ">
-							<a href="./template-page.html" class="flex-fill "> Канализация</a> <span>12.12.2024</span>
+							<a href="./template-page.html" class="flex-fill " data-name-il> Канализация</a>
+							<span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">Редактировать</button>
-									<button type="button" class="dropdown-item">Удалить</button>
+									<button type="button" class="dropdown-item" data-toggle="modal"
+										data-target="#modal-edit-folder" onclick='getNameItemList(event)'>Редактировать</button>
+									<button type="button" class="dropdown-item" onclick="deleteItemList(event)">Удалить</button>
 								</div>
 							</div>
 						</li>
 						<li class="_icon-folder ">
-							<a href="./template-page.html" class="flex-fill"> Фундамент</a> <span>12.12.2024</span>
+							<a href="./template-page.html" class="flex-fill" data-name-il> Фундамент</a>
+							<span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">Редактировать</button>
-									<button type="button" class="dropdown-item">Удалить</button>
+									<button type="button" class="dropdown-item" data-toggle="modal"
+										data-target="#modal-edit-folder" onclick='getNameItemList(event)'>Редактировать</button>
+									<button type="button" class="dropdown-item" onclick="deleteItemList(event)">Удалить</button>
 								</div>
 							</div>
 						</li>
-						<li class="_icon-folder ">
-							<a href="./template-page.html" class="flex-fill "> Скважины</a> <span>12.12.2024</span>
+						<li class="_icon-folder">
+							<a href="./template-page.html" class="flex-fill " data-name-il>Скважины</a>
+							<span>12.12.2024</span>
 							<div class="search-items__btn-dropdown dropdown-search">
 								<button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
 								</button>
 								<div class="dropdown-menu " x-placement="bottom-start">
-									<button type="button" class="dropdown-item">Редактировать</button>
-									<button type="button" class="dropdown-item">Удалить</button>
+									<button type="button" class="dropdown-item" data-toggle="modal"
+										data-target="#modal-edit-folder" onclick='getNameItemList(event)'>Редактировать</button>
+									<button type="button" class="dropdown-item" onclick="deleteItemList(event)">Удалить</button>
 								</div>
 							</div>
 						</li>
@@ -174,6 +183,66 @@
 
 	</div>
 
+
+
+	<!-- Начало  Модлаьно  окно создание -->
+	<div class="modal fade" id="modal-create-folder" data-modal-id style="display: none;" aria-hidden="true">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content modal-custom">
+				<div class="modal-custom__content">
+					<div class="modal-custom__title middle-title mb-3">Создание папки</div>
+					<div class="block-item">
+
+
+						<div class="block-item__item">
+							<div class="block-item__label">Имя папки:</div>
+							<div class="block-item__contetn"><input autocomplete="off" type="text" name="Имя"
+									placeholder="Введите имя папки" class="input-default _edit-input _validate"></div>
+						</div>
+
+
+
+					</div>
+					<div class="d-flex mt-5 justify-content-between modal-custom__footer">
+						<button type="button" data-dismiss="modal" class="butt">Отмена</button>
+						<button type="button" onclick="createFolder(event)" class="butt-success ">Сохранить</button>
+					</div>
+				</div>
+			</div>
+
+		</div>
+
+	</div>
+	<!-- Конец Модлаьно окно создание-->
+	<!-- Начало  Модлаьно  окно редактирование -->
+	<div class="modal fade" id="modal-edit-folder" data-modal-id style="display: none;" aria-hidden="true">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content modal-custom">
+				<div class="modal-custom__content">
+					<div class="modal-custom__title middle-title mb-3">Редактиование папки</div>
+					<div class="block-item">
+
+
+						<div class="block-item__item">
+							<div class="block-item__label">Имя папки:</div>
+							<div class="block-item__contetn"><input autocomplete="off" type="text" name="Имя"
+									placeholder="Введите имя папки" class="input-default _edit-input _validate"></div>
+						</div>
+
+
+
+					</div>
+					<div class="d-flex mt-5 justify-content-between modal-custom__footer">
+						<button type="button" data-dismiss="modal" class="butt">Отмена</button>
+						<button type="button" onclick="saveEditFolder(event)" class="butt-success ">Сохранить</button>
+					</div>
+				</div>
+			</div>
+
+		</div>
+
+	</div>
+	<!-- Конец Модлаьно окно редактирование-->
 
 	<!-- jQuery -->
 	<script src="../plugins/jquery/jquery.min.js"></script>
