fix Коментриее заменил на textarae

--- a/pages/create-smeta.html
+++ b/pages/create-smeta.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../plugins/select2/css/select2.min.css">
 
 
-	<link rel="stylesheet" href="../public/dist/css/adminlte.min.css">
+	<link rel="stylesheet" href="../adminlte/adminlte.min.css">
 	<!-- overlayScrollbars -->
 	<link rel="stylesheet" href="../plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
 	<!-- Календарь -->
@@ -268,7 +268,8 @@
 					<div class="list-input__item">
 						<label class="list-input__label">Комментарии</label>
 						<div class="list-input__wrapper-input">
-							<input autocomplete="off" class="input-default" name="Комментарии" type="text">
+							<textarea ame="комментарий" id="" class="textarea-default" data-lt-tmp-id="lt-324781"
+								spellcheck="false" data-gramm="false"></textarea>
 						</div>
 					</div>
 					<div class="list-input__item" style="display: none;">
@@ -439,7 +440,7 @@
 
 
 
-	<script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
+	<script src="../adminlte/adminlte.min.js"></script>
 
 
 	<script type="module" src="../src/assets/js/main.js"></script>
