--- a/pages/price-list.html
+++ b/pages/price-list.html
@@ -8,8 +8,8 @@
   <title>Прайс-лист</title>
   <!-- Select2 -->
   <link rel="stylesheet" href="../plugins/select2/css/select2.min.css">
-  <link rel="stylesheet" href="../plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
-  <link rel="stylesheet" href="../public/dist/css/adminlte.min.css">
+
+  <link rel="stylesheet" href="../adminlte/adminlte.min.css">
   <!-- overlayScrollbars -->
   <link rel="stylesheet" href="../plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
 
@@ -1119,7 +1119,7 @@
 
 
   <!-- AdminLTE App -->
-  <script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
+  <script src="../adminlte/adminlte.min.js"></script>
 
 
 
