--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite App</title>
   <link rel="stylesheet" href="../plugins/select2/css/select2.min.css">
-  <link rel="stylesheet" href="./public/dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="./adminlte/adminlte.min.css">
 
   <link rel="stylesheet" href="./public/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
 
@@ -409,7 +409,7 @@
   <!-- календарь -->
   <script src="./plugins/daterangepicker/daterangepicker.js"></script>
   <!-- AdminLTE App -->
-  <script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
+  <script src="./adminlte/adminlte.min.js"></script>
   <script type="module" src="./src/assets/js/main.js"></script>
 </body>
 
