--- a/pages/clients.html
+++ b/pages/clients.html
@@ -10,7 +10,7 @@
 	<!-- Select2 -->
 	<link rel="stylesheet" href="../plugins/select2/css/select2.min.css">
 
-	<link rel="stylesheet" href="../public/dist/css/adminlte.min.css">
+	<link rel="stylesheet" href="../adminlte/adminlte.min.css">
 
 	<link rel="stylesheet" href="../plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
 
@@ -256,7 +256,7 @@
 
 
 	<!-- AdminLTE App -->
-	<script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
+	<script src="../adminlte/adminlte.min.js"></script>
 
 
 	<script type="module" src="../src/assets/js/main.js"></script>
