--- a/pages/create-template.html
+++ b/pages/create-template.html
@@ -9,12 +9,11 @@
 
 	<!-- Select2 -->
 	<link rel="stylesheet" href="../plugins/select2/css/select2.min.css">
-	<link rel="stylesheet" href="../plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
-	<!-- iCheck -->
-	<link rel="stylesheet" href="../plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+
+
 
 	<!-- Theme style -->
-	<link rel="stylesheet" href="../public/dist/css/adminlte.min.css">
+	<link rel="stylesheet" href="../adminlte/adminlte.min.css">
 	<!-- overlayScrollbars -->
 	<link rel="stylesheet" href="../plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
 
@@ -201,7 +200,8 @@
 						</div>
 						<div class="mt-3">
 							<label class="very-small-title"> Комментарий</label>
-							<input type="text" class="input-default" name="комментарий">
+							<textarea ame="комментарий" id="" class="textarea-default" data-lt-tmp-id="lt-324781"
+								spellcheck="false" data-gramm="false"></textarea>
 						</div>
 
 					</div>
@@ -237,7 +237,7 @@
 
 
 
-		<script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
+		<script src="../adminlte/adminlte.min.js"></script>
 
 		<script type="module" src="../src/assets/js/main.js"></script>
 
