--- a/pages/template-page.html
+++ b/pages/template-page.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>По количеству человек</title>
 
-	<link rel="stylesheet" href="../public/dist/css/adminlte.min.css">
+	<link rel="stylesheet" href="../adminlte/adminlte.min.css">
 	<!-- overlayScrollbars -->
 	<link rel="stylesheet" href="../plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
 
@@ -255,7 +255,7 @@
 
 
 
-	<script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
+	<script src="../adminlte/adminlte.min.js"></script>
 
 
 	<script type="module" src="../src/assets/js/main.js"></script>
