--- a/pages/users-page.html
+++ b/pages/users-page.html
@@ -9,7 +9,7 @@
 	</title>
 
 	<!-- Theme style -->
-	<link rel="stylesheet" href="../public/dist/css/adminlte.min.css">
+	<link rel="stylesheet" href="../adminlte/adminlte.min.css">
 	<!-- overlayScrollbars -->
 	<link rel="stylesheet" href="../plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
 
@@ -320,7 +320,7 @@
 
 
 	<!-- AdminLTE App -->
-	<script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
+	<script src="../adminlte/adminlte.min.js"></script>
 
 	<script type="module" src="../src/assets/js/main.js"></script>
 </body>
