feat:вынес файлы aminlte

--- a/pages/create-smeta.html
+++ b/pages/create-smeta.html
@@ -265,7 +265,7 @@
 							<input autocomplete="off" class="input-default" name="Координаты" type="text">
 						</div>
 					</div>
-					<div class="list-input__item">
+					<div class="list-input__item align-items-start">
 						<label class="list-input__label">Комментарии</label>
 						<div class="list-input__wrapper-input">
 							<textarea ame="комментарий" id="" class="textarea-default" data-lt-tmp-id="lt-324781"
