feat: всякие измения

--- a/pages/create-smeta.html
+++ b/pages/create-smeta.html
@@ -248,9 +248,9 @@
 
 					</div>
 					<div class="list-input__item">
-						<label class="list-input__label">Название</label>
+						<label class="list-input__label">Название КП</label>
 						<div class="list-input__wrapper-input">
-							<input autocomplete="off" class="input-default" name="Название" type="text">
+							<input autocomplete="off" class="input-default" name="Название КП" type="text">
 						</div>
 					</div>
 					<div class="list-input__item">
@@ -306,9 +306,9 @@
 
 
 			<div class="container-content">
-				<label class="very-small-title"> Комментарий к КП которого на самом деле больше нет</label>
+				<label class="very-small-title">Примечание к КП (не отображается в смете)</label>
 
-				<textarea ame="комментарий" id="" class="textarea-default"></textarea>
+				<textarea name="Примечание к КП" id="" class="textarea-default"></textarea>
 			</div>
 			<div class="bulkActionBar container-content">
 				<button type="submit" class="butt-success " data-toggle="dropdown" aria-expanded="false">Экспортировать
