--- a/pages/create-template.html
+++ b/pages/create-template.html
@@ -158,15 +158,14 @@
 												onblur="saveTextInput(event)" class="input-default"></div>
 										<div class="accordion__select ">
 											<label class="accordion__name-select">Статус</label>
-											<div class="select-status">
-												<select class="select2  select2-hidden-accessible" name="Статус"
+											<div class="select-stamp">
+												<select class="select2 select2-stamp  select2-hidden-accessible" name="Печать"
 													style="width: 100%;" data-select2-id="select-status-" tabindex="-1"
 													aria-hidden="true">
-													<option value="Выполнено" class="select-status__completed">Выполнено</option>
-													<option selected value="В работе" class="select-status__in-progress">В работе
+													<option value="Без печати" class="select-status__completed" selected>Без печати
 													</option>
-													<option value="Отменено" class="select-status__cancelled">Отменено</option>
-													<option value="Отложено" class="select-status__postponed">Отложено</option>
+													<option value="С печатью" class="select-status__in-progress">С печатью</option>
+
 												</select>
 											</div>
 										</div>
@@ -216,10 +215,9 @@
 				<button class="butt bg-gradient-danger" onclick="deleteSelectedItems()">Удалить выброное</button>
 				<div>Кол-во выбраных: <span data-selected-count>0</span></div>
 			</div>
-			</а>
+
 
 		</form>
-
 
 		<!-- jQuery -->
 		<script src="../plugins/jquery/jquery.min.js"></script>
@@ -227,10 +225,9 @@
 		<script src="../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 		<!-- Select2 -->
 		<script src="../plugins/select2/js/select2.full.min.js"></script>
+
 		<!-- jQuery UI 1.11.4 -->
 		<script src="../plugins/jquery-ui/jquery-ui.min.js"></script>
-		<!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-
 
 
 
