--- a/pages/create-template.html
+++ b/pages/create-template.html
@@ -138,13 +138,13 @@
 				</div>
 			</div>
 
-			<ul class="todo-list" data-smeta data-widget="todo-list">
-				<li class="todo-list__item   d-flex" data-smeta-item>
-					<div class="todo-list__wrapper">
-						<div class="todo-list__contetn">
+			<ul class="list-smeta" data-smeta>
+				<li class="list-smeta__item   d-flex" data-smeta-item>
+					<div class="list-smeta__wrapper">
+						<div class="list-smeta__contetn">
 							<span class="handle  _icon-darag">
 							</span>
-							<div class="todo-list__accordion accordion  card ">
+							<div class="list-smeta__accordion accordion  card ">
 								<div class="text-left  accordion__header collapsed middle-title">
 									<button type="button" class="accordion__btn" data-animation-speed="0"
 										data-card-widget="collapse"></button>
@@ -180,7 +180,7 @@
 
 								<div class="accordion__body card-body">
 									<!-- Этапы работы -->
-									<ul class="todo-list   mt-3" data-stages data-widget="todo-list">
+									<ul class="list-smeta   mt-3" data-stages>
 
 									</ul>
 
@@ -190,7 +190,7 @@
 
 							</div>
 						</div>
-						<div class="todo-list__footer footer-list">
+						<div class="list-smeta__footer footer-list">
 							<button type="button" class="butt-plus" onclick="creatingStages(event)"
 								data-create-stage><span>Этап
 									работ</span></button>
