--- a/pages/create-template.html
+++ b/pages/create-template.html
@@ -157,7 +157,7 @@
 											data-name='Наименование сметы'><input type="text" data-edit-input
 												onblur="saveTextInput(event)" class="input-default"></div>
 										<div class="accordion__select ">
-											<label class="accordion__name-select">Статус</label>
+											<label class="accordion__name-select">Печать</label>
 											<div class="select-stamp">
 												<select class="select2 select2-stamp  select2-hidden-accessible" name="Печать"
 													style="width: 100%;" data-select2-id="select-status-" tabindex="-1"
@@ -199,8 +199,7 @@
 						</div>
 						<div class="mt-3">
 							<label class="very-small-title"> Комментарий</label>
-							<textarea ame="комментарий" id="" class="textarea-default" data-lt-tmp-id="lt-324781"
-								spellcheck="false" data-gramm="false"></textarea>
+							<textarea ame="комментарий" id="" class="textarea-default"></textarea>
 						</div>
 
 					</div>
