--- a/pages/create-smeta.html
+++ b/pages/create-smeta.html
@@ -380,7 +380,7 @@
 					</div>
 					<div class="d-flex mt-5 justify-content-between modal-custom__footer">
 						<button type="button" data-dismiss="modal" class="butt">Отмена</button>
-						<button type="button" class="butt-success" onclick="saveEditClient()">Создать клиента</button>
+						<button type="button" class="butt-success" onclick="saveEditClient()">Создать</button>
 					</div>
 				</form>
 			</div>
