--- a/pages/create-template.html
+++ b/pages/create-template.html
@@ -132,7 +132,8 @@
 							</select>
 						</div>
 
-						<button type="button" class="list-input__butt-plus butt-plus">Создать категорию</button>
+						<button type="button" class="list-input__butt-plus butt-plus" data-toggle="modal"
+							data-target="#modal-create-category">Создать категорию</button>
 					</div>
 
 				</div>
@@ -217,7 +218,35 @@
 
 
 		</form>
+		<!-- Начало  Модлаьно  окно создание -->
+		<div class="modal fade" id="modal-create-category" data-modal-id style="display: none;" aria-hidden="true">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content modal-custom">
+					<div class="modal-custom__content">
+						<div class="modal-custom__title middle-title mb-3">Создание категории</div>
+						<div class="block-item">
 
+
+							<div class="block-item__item">
+								<div class="block-item__label">Имя категории:</div>
+								<div class="block-item__contetn"><input autocomplete="off" type="text" name="Имя категории"
+										placeholder="Введите имя категории" class="input-default _edit-input _validate"></div>
+							</div>
+
+
+
+						</div>
+						<div class="d-flex mt-5 justify-content-between modal-custom__footer">
+							<button type="button" data-dismiss="modal" class="butt">Отмена</button>
+							<button type="button" onclick="createFolder(event)" class="butt-success ">Создать</button>
+						</div>
+					</div>
+				</div>
+
+			</div>
+
+		</div>
+		<!-- Конец Модлаьно окно создание-->
 		<!-- jQuery -->
 		<script src="../plugins/jquery/jquery.min.js"></script>
 		<!-- Bootstrap 4 -->
