--- a/pages/file-storage.html
+++ b/pages/file-storage.html
@@ -315,7 +315,7 @@
 					</div>
 					<div class="d-flex mt-5 justify-content-between modal-custom__footer">
 						<button type="button" data-dismiss="modal" class="butt">Отмена</button>
-						<button type="button" onclick="createFolder(event)" class="butt-success ">Сохранить</button>
+						<button type="button" onclick="createFolder(event)" class="butt-success ">Создать</button>
 					</div>
 				</div>
 			</div>
