feat: начинаю править селект2

--- a/pages/create-smeta.html
+++ b/pages/create-smeta.html
@@ -300,7 +300,7 @@
 			<div class="d-flex mb-4  align-items-center">
 				<button type="button" data-widget="control-sidebar" data-controlsidebar-slide="true"
 					class="butt butt-success mr-3">Добавить смету</button>
-				<button type="submit" class="butt-success " data-toggle="dropdown" aria-expanded="false">Экспортирует всё кп
+				<button type="submit" class="butt-success ">Экспортирует всё кп
 					(все сметы)
 				</button>
 			</div>
@@ -313,6 +313,8 @@
 				<textarea name="Примечание к КП" id="" class="textarea-default"></textarea>
 			</div>
 			<div class="bulkActionBar container-content">
+				<button type="submit" class="butt-success ">Экспортировать
+				</button>
 				<button class="butt">Обновить цены</button>
 				<button class="butt bg-gradient-danger" onclick="deleteSelectedItems()" type="button">Удалить
 					выброное</button>
