--- a/pages/create-template.html
+++ b/pages/create-template.html
@@ -209,7 +209,7 @@
 
 
 			<div class="bulkActionBar container-content">
-				<button type="submit" class="butt-success " data-toggle="dropdown" aria-expanded="false">Экспортировать
+				<button type="submit" class="butt-success ">Экспортировать
 				</button>
 				<button class="butt">Обновить цены</button>
 				<button class="butt bg-gradient-danger" onclick="deleteSelectedItems()">Удалить выброное</button>
