feat: добавил поле для ошибки

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
               <div class="dropdown-menu">
                 <a href="./create-smeta.html" class="dropdown-item _icon-smeta">Смету</a>
                 <a href="./create-template.html" class="dropdown-item _icon-template">Шаблон</a>
-                <button type="button" class="dropdown-item _icon-user" data-toggle="modal"
-                  data-target="#modal-client">Клиента</button>
+                <button type="button" class="dropdown-item _icon-user" data-toggle="modal" data-target="#modal-client"
+                  onclick="clearInputPL()">Клиента</button>
 
               </div>
             </div>
