--- a/price-list.html
+++ b/price-list.html
@@ -168,7 +168,19 @@
               <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small"></button></td>
             </tr>
 
+            <tr>
 
+              <td class="dtr-control" tabindex="0"></td>
+              <td><span class="_mat-category">Мат</span></td>
+              <td class="">01232</td>
+              <td class="sorting_1">Доски струганые половые</td>
+              <td>м.</td>
+              <td>м.</td>
+              <td>10</td>
+              <td><button type=" button" onclick='editPositionPriceList(event)' data-toggle="modal"
+                  data-target="#modal-edit-position" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small"></button></td>
+            </tr>
           </tbody>
 
         </table>
